<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:padding="10dp"
    tools:context="com.example.hxr.trafficstop.Home">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="#333"
        android:text="@string/Home"
        android:textColor="#fff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/select_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/Select_Vehicle"
        android:textColor="#fff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/select_vehicle"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/Add_New_Vehicle"
        android:onClick="openEditorForNewCar"/>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:layout_below="@+id/cars"
        android:onClick="goToRegister"
        />


    <ListView
        android:id="@+id/cars"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button2"
        android:background="@color/colorAccent"
        />
</RelativeLayout>
