<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:padding="10dp"
    tools:context="com.example.hxr.trafficstop.Cars">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="#333"
        android:text="@string/Cars"
        android:textColor="#fff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/select_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/Select_Vehicle"
        android:textColor="#fff"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/cars"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/select_vehicle"
        android:background="@color/colorAccent"
        />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Continue"
        android:layout_below="@+id/cars"
        />
</RelativeLayout>
